--- a/src/Telegram.Bot.Framework/Telegram.Bot.Framework.csproj
+++ b/src/Telegram.Bot.Framework/Telegram.Bot.Framework.csproj
@@ -1,21 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <PackageId>Telegram.Bot.Framework</PackageId>
-    <PackageVersion>2.0.0-alpha4</PackageVersion>
+    <PackageId>Fedorus.Telegram.Bot.Framework</PackageId>
+    <PackageVersion>1.0.0</PackageVersion>
 
     <LangVersion>latest</LangVersion>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 
-    <Title>Telegram Bot Framework</Title>
+    <Title>Fedorus`s Telegram Bot Framework</Title>
     <Description>Simple framework for building powerful Telegram bots 🤖</Description>
-    <Authors>Poulad,TelegramBots</Authors>
-    <PackageTags>telegram;bot;chatbot;chat-framework;framework;netcore</PackageTags>
+    <Authors>Fedorus, Poulad,TelegramBots</Authors>
+    <PackageTags>telegram;bot;chatbot;chat-framework;netcore</PackageTags>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <RepositoryType>git</RepositoryType>
-    <PackageProjectUrl>https://github.com/TelegramBots/Telegram.Bot.Framework</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/TelegramBots/Telegram.Bot.Framework.git</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/Fedorus/Telegram.Bot.Framework</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Fedorus/Telegram.Bot.Framework.git</RepositoryUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/TelegramBots/Telegram.Bot.Framework/master/docs/icon.png</PackageIconUrl>
     <PackageLicenseUrl>https://raw.githubusercontent.com/TelegramBots/Telegram.Bot.Framework/master/LICENSE</PackageLicenseUrl>
     <TargetFramework>netstandard1.3</TargetFramework>
