--- a/sample/Quickstart.AspNetCore/appsettings.json
+++ b/sample/Quickstart.AspNetCore/appsettings.json
@@ -3,6 +3,7 @@
     "Username": "quickstart_tgbot",
     "ApiToken": "1234567:4TT8bAc8GHUspu3ERYn-KGcvsvGB9u_n4ddy",
     "WebhookDomain": "https://quickstart-tgbot.herokuapp.com",
-    "WebhookPath": "/api/bots/1234567:4TT8bAc8GHUspu3ERYn-KGcvsvGB9u_n4ddy/webhook"
+    "WebhookPath": "/api/bots/1234567:4TT8bAc8GHUspu3ERYn-KGcvsvGB9u_n4ddy/webhook",
+    "CustomBotServer": "http://localhost:15400"
   }
 }
